--- a/engage.html
+++ b/engage.html
@@ -2,6 +2,12 @@
 <!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0dc379bd728fc08022f" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Optimise your engagement and ad revenue | Storipress</title>
   <meta content="Increase your readership by 20% on Storipress&#x27; CMS. Storipress&#x27; myriad of performance and engagement features ensure more readers discover, read, and share your content." name="description">
