--- a/vs/medium.html
+++ b/vs/medium.html
@@ -2,6 +2,12 @@
 <!--  Last Published: Tue Jan 19 2021 12:29:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7acec2435056b1a826505b" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Storipress vs. Medium: Gain ownership of your content</title>
   <meta content="Using Medium, you don&#x27;t own any of the experience and your content will ultimately be promoting Medium itself — not just your own work. Storipress offers a platform for you to build a brand around your content, empowering your content to go further." name="description">
