--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -2,6 +2,12 @@
 <!--  Last Published: Tue Jan 19 2021 12:29:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Storipress vs. WordPress: Discover the WordPress alternative</title>
   <meta content="The serious publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." name="description">
