--- a/build.html
+++ b/build.html
@@ -2,6 +2,12 @@
 <!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5f1c74825997427a54233a" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Design &amp; Build | Storipress</title>
   <meta content="Your content is unique. Your publication should be too. Push the limits of what&#x27;s possible in web design and create unique editorial experiences that are both both professionally designed and deliver best in class performance and SEO with Storipress&#x27; intuitive block based website builder." name="description">
