Fixed typo in SEO heading

--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -9,12 +9,12 @@
   <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
-  <title>Storipressft | What WordPress really costs you</title>
+  <title>Storipress | What WordPress really costs you</title>
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." name="description">
-  <meta content="Storipressft | What WordPress really costs you" property="og:title">
+  <meta content="Storipress | What WordPress really costs you" property="og:title">
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1610941039/1500x500" property="og:image">
-  <meta content="Storipressft | What WordPress really costs you" property="twitter:title">
+  <meta content="Storipress | What WordPress really costs you" property="twitter:title">
   <meta content="We know what you’re thinking: WordPress is free! But as the saying goes: there’s no such thing as a free [website platform]. With a bunch of hidden costs, Storipress is the affordable — yet more powerful alternative to WordPress." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1610941039/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
