--- a/pricing.html
+++ b/pricing.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jan 24 2021 07:03:28 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
-  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Plans &amp; Pricing | Storipress</title>
   <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Storipress, and it&#x27;s free forever. $14.90USD. Per month billed annually, or $21 billed monthly. Remove the Storipress logo and unlock multi-publication support. $33.90USD. Per month billed annually, or $48 billed monthly." name="description">
@@ -374,7 +368,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="content-parent">
         <div class="_1st-column">
           <div class="div-block-1338">
-            <h3 class="pricing-feat-detail">Comments + Akismet spam protection</h3>
+            <h3 class="pricing-feat-detail">Comments + spam protection</h3>
             <div data-tippy-content="Jraft comes with Coral Talk, a comment system used by major publishers like Vox, the Washington Post Post, and Fairfax Media." data-w-id="a17e9f27-915d-6e3e-e15e-378f7b6f8b56" class="tippy"><img src="images/More-Info.svg" loading="lazy" alt="" class="image-36"></div>
           </div>
         </div>
@@ -527,59 +521,69 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="line-2"></div>
     </div>
     <div class="w-layout-grid faq-grid">
-      <div>
+      <div class="faq-question-parent">
         <h5 class="all-plans-titile">High performance? No bandwidth limits? What&#x27;s the catch?</h5>
         <div class="all-plans-description">There&#x27;s no catch. Sign up for free, create a publication, and test Storipress&#x27;s performance yourself on Google Pagespeed. Storipress&#x27; proprietary advanced infrastructure enables performance at an unheard of price.<br></div>
       </div>
-      <div>
-        <h5 class="all-plans-titile">Can I trial Storipress before paying?</h5>
-        <div class="all-plans-description">Sure! You can test out Storipress on our free plan with full access to our basic features. Your publication will have a 1 person user limit, a stori.press domain and limited features, but you can purchase a plan to link a custom domain, more staff, collaborative editing, site comments and more.</div>
-      </div>
-      <div>
-        <h5 class="all-plans-titile">How are &#x27;active staff users&#x27; calculated?</h5>
-        <div class="all-plans-description">Active staff users refers to the total number of team members invited to Storipress whom you collaborate with. For the purposes of billing, we only count users who are not suspended.</div>
-      </div>
-      <div>
-        <h5 class="all-plans-titile">My publication relies on a lot of third party writer submissions, I can&#x27;t pay for a seat every time we publish one!</h5>
-        <div class="all-plans-description">This isn&#x27;t a problem, Storipress only counts <span class="text-span-8"><em>active</em></span> users as part of your pricing. If your publication is mostly driven by non full-time staff, simply suspend their accounts (their articles will stay up — they just can&#x27;t login) and that will free up another seat.</div>
-      </div>
-      <div>
-        <h5 class="all-plans-titile">How much traffic can the hosting handle?</h5>
-        <div class="all-plans-description">Storipress hosting scales automatically to handle <strong class="bold-text">billions</strong> of concurrent visits. All site plans serve sites through our Amazon&#x27;s Cloudfront CDN, loading sites in milliseconds.</div>
-      </div>
-      <div>
-        <h5 class="all-plans-titile">Can I cancel my account plan at any time?</h5>
-        <div class="all-plans-description">Yes, you can cancel your account at any time. If you do, you&#x27;ll be downgraded to the free plan, where your publication will be delivered through a stori.press domain and premium features like commenting will be disabled. You won&#x27;t be locked out of any sites that have site plans set up, even if you&#x27;re on the free plan.</div>
-      </div>
-      <div>
-        <h5 class="all-plans-titile">Are Storipress publications SEO-friendly?</h5>
-        <div class="all-plans-description">Yes! All content on Storipress publications is rendered on our servers and served through SSL, so your pages will be searchable and prioritized by Google. You can also edit meta and OpenGraph tags to optimise each page.</div>
-      </div>
-      <div>
-        <h5 class="all-plans-titile">What kind of support does Storipress provide?</h5>
-        <div class="all-plans-description">We offer fast email support to paid accounts and prioritized help for publisher accounts. Community support (forum.stori.press) is available to free accounts.</div>
-      </div>
-      <div>
+      <div class="faq-question-parent">
         <h5 class="all-plans-titile">How long does it take to learn Storipress?</h5>
         <div class="all-plans-description">We like to think that Storipress has the lowest learning curve out of any CMS. If it looks like it works one way, it does. In other words, you can forget having nightmares about WordPress&#x27; UI.</div>
       </div>
-      <div>
-        <h5 class="all-plans-titile">Does Storipress have an affiliate program?</h5>
-        <div class="all-plans-description">We&#x27;re currently in the process of designing our affiliate programme and hope to release it to the public soon. Want to have a say in how we work with affiliates? <a href="mailto:hello@tryjraft.com?subject=Jraft&#x27;s%20Affiliate%20Programme" class="blog-link">Shoot us an email at hello@stori.press</a>.</div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">Can I trial Storipress?</h5>
+        <div class="all-plans-description">Absolutely! Storipress is free to use, forever. Additionally, all our paid plans come with free 3 month trial, more than enough to try out Storipress with your team before upgrading.</div>
       </div>
-      <div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">How much traffic can the hosting handle?</h5>
+        <div class="all-plans-description">Storipress hosting scales automatically to handle <strong class="bold-text">millions</strong> of concurrent visits. All site plans serve sites through Amazon&#x27;s CDN infrastructure loading sites in milliseconds.</div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">Are Storipress publications SEO-friendly?</h5>
+        <div class="all-plans-description">Yes! All content on Storipress publications is rendered on our servers and served through SSL, so your pages will be searchable and prioritized by Google. You can also edit meta and OpenGraph tags to optimise each page.</div>
+      </div>
+      <div class="faq-question-parent">
         <h5 class="all-plans-titile">Do you have discounts for student publications or nonprofits?</h5>
-        <div class="all-plans-description">Yes! Storipress is free for student publications and nonprofits.<strong class="bold-text-2"> Shoot us an email with proof of your study or non-profit status at </strong>
-          <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong><br>
-        </div>
+        <div class="all-plans-description">Yes! Storipress is free for student publications and nonprofits.<strong class="bold-text-2"> </strong>Shoot us an email with proof of your study or non-profit status at <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong><br></div>
       </div>
-      <div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">How are users calculated for billing?</h5>
+        <div class="all-plans-description">We offer a <span class="text-span-10">fair billing policy</span> as we believe you should only pay for users actively using Storipress. Editor permissions and above are paid members. Author permissions and below are billed only if they have an article published in a billing month. If Storipress detects an inactive user, we&#x27;ll add pro rata credits to your Storipress account and they&#x27;ll be applied when new members are added to your publication, or on your next renewal date.</div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">How does adding and removing members work?</h5>
+        <div class="all-plans-description">Whether you&#x27;re on a monthly or yearly plan, your account may be charged on a monthly basis if you make these types of changes. If you add members, your account will be charged a prorated amount based on the percentage of the billing cycle left at the time each member was added. If you remove members, your account will be credited in the same way.</div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">What happens when I change plans?</h5>
+        <div class="all-plans-description">Upgrading or downgrading your plan works similarly to adding and removing members. Your account will be charged or credited based on the percentage of the billing cycle left at the time the plan was changed.</div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">What happens if I cancel my paid plan?</h5>
+        <div class="all-plans-description">When you cancel your plan, you will remain on the plan until the end of your billing cycle, at which time the plan will be canceled.</div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">My publication relies on a lot of third party writer submissions</h5>
+        <div class="all-plans-description">Storipress only counts <span class="text-span-11">active</span> users as part of your billing. If your publication is mostly driven by submissions, add them to your publication as authors or contributors, and you&#x27;ll only be billed if they have an article published within a billing month.</div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">Does Storipress have an affiliate program?</h5>
+        <div class="all-plans-description">We&#x27;re currently in the process of designing our affiliate programme and hope to release it to the public soon. Want to have a say in how we work with affiliates? <a href="mailto:hello@storipress.com?subject=Storipress&#x27;%20Affiliate%20Programme" class="blog-link">Shoot us an email at hello@storipress.com</a>.</div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">Can I have more than 1 publication on one plan?</h5>
+        <div class="all-plans-description">On our enterprise plan, Storipress allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Storipress will cut 80% of your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@storipress.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
+      </div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">What kind of support does Storipress provide?</h5>
+        <div class="all-plans-description">We offer fast email support to paid accounts and prioritized help for publisher accounts. Community support (forum.stori.press) is available to free accounts.</div>
+      </div>
+      <div class="faq-question-parent">
         <h5 class="all-plans-titile">Does Storipress have an API?</h5>
         <div class="all-plans-description">Post launch, Storipress will be releasing our public GraphQL-based API you can use to create automations for your publication.</div>
       </div>
-      <div>
-        <h5 class="all-plans-titile">Can I have more than 1 publication on one plan?</h5>
-        <div class="all-plans-description">On our enterprise plan, Storipress allows users to manage multiple publications on a single instance and plan. If you&#x27;re currently on WordPress, Storipress will cut 80% of your hosting bill whilst making your team 2x more productive — to learn more, <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20Enterprise" class="blog-link">contact enterprise sales</a>.<br></div>
+      <div class="faq-question-parent">
+        <h5 class="all-plans-titile">How is my payment being processed?</h5>
+        <div class="all-plans-description">We use Stripe to process your payment. It’s the same payment provider used by products such as Twitter, Pinterest, and Lyft. We do not handle your credit card information directly.<br></div>
       </div>
     </div>
   </div>
