--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jan 24 2021 07:03:28 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jan 29 2021 04:40:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -547,7 +547,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">How are users calculated for billing?</h5>
-        <div class="all-plans-description">We offer a <span class="text-span-10">fair billing policy</span> as we believe you should only pay for users actively using Storipress. Editor permissions and above are paid members. Author permissions and below are billed only if they have an article published in a billing month. If Storipress detects an inactive user, we&#x27;ll add pro rata credits to your Storipress account and they&#x27;ll be applied when new members are added to your publication, or on your next renewal date.</div>
+        <div class="all-plans-description">We offer a <span class="pricing-bold">fair billing policy</span> as we believe you should only pay for users actively using Storipress. Editor permissions and above are paid members. Author permissions and below are billed <strong class="pricing-bold">only if they have more than one article published</strong> in a billing month. If Storipress detects an inactive user, we&#x27;ll add pro rata credits to your Storipress account and they&#x27;ll be applied when new members are added to your publication, or on your next renewal date.</div>
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">How does adding and removing members work?</h5>
@@ -563,7 +563,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">My publication relies on a lot of third party writer submissions</h5>
-        <div class="all-plans-description">Storipress only counts <span class="text-span-11">active</span> users as part of your billing. If your publication is mostly driven by submissions, add them to your publication as authors or contributors, and you&#x27;ll only be billed if they have an article published within a billing month.</div>
+        <div class="all-plans-description">Storipress only counts <span class="text-span-11">active</span> users as part of your billing, i.e., authors or contributors who have more than 1 article published per month. This model makes Storipress perfectly suited for publications which rely solely on contributions!<br></div>
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">Does Storipress have an affiliate program?</h5>
@@ -575,7 +575,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">What kind of support does Storipress provide?</h5>
-        <div class="all-plans-description">We offer fast email support to paid accounts and prioritized help for publisher accounts. Community support (forum.stori.press) is available to free accounts.</div>
+        <div class="all-plans-description">We offer fast email support to paid accounts and prioritized help for publisher accounts. Community support (forum.storipress.com) is available to free accounts.</div>
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">Does Storipress have an API?</h5>
@@ -684,7 +684,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </ul>
         </div>
       </div>
-      <div class="footer-copyright-notice">© 2020 Albion Media Pty Ltd. All rights reserved.</div>
+      <div class="footer-copyright-notice">© Storipress</div>
     </div>
   </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f475d95bc662b718071304a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
