--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Jan 19 2021 07:13:07 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jan 29 2021 04:40:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
-  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Storipress: The best publishing and blogging platform ever</title>
   <meta content="Build and manage a professional publication, then launch with our world-class hosting. Discover the professional platform built for publishers." name="description">
@@ -212,7 +207,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-      <div class="div-block-1433"><img src="images/Mobile-Builder-Screen-2.png" loading="lazy" width="640" sizes="(max-width: 479px) 100vw, (max-width: 767px) 76vw, (max-width: 991px) 43vw, 45vw" srcset="images/Mobile-Builder-Screen-2-p-500.png 500w, images/Mobile-Builder-Screen-2-p-800.png 800w, images/Mobile-Builder-Screen-2-p-1080.png 1080w, images/Mobile-Builder-Screen-2.png 1280w" alt="">
+      <div class="div-block-1433"><img src="images/Mobile-Builder-Screen-2.png" loading="lazy" width="640" sizes="(max-width: 479px) 100vw, (max-width: 767px) 85vw, (max-width: 991px) 48vw, 50vw" srcset="images/Mobile-Builder-Screen-2-p-500.png 500w, images/Mobile-Builder-Screen-2-p-800.png 800w, images/Mobile-Builder-Screen-2-p-1080.png 1080w, images/Mobile-Builder-Screen-2.png 1280w" alt="">
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Designed for Publications</h3>
@@ -255,7 +250,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-      <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 81vw, (max-width: 991px) 43vw, 45vw" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" alt="Jraft&#x27;s collaborative editor in action">
+      <div class="div-block-1433"><img src="images/Editor.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 48vw, 50vw" srcset="images/Editor-p-500.png 500w, images/Editor-p-800.png 800w, images/Editor-p-1080.png 1080w, images/Editor.png 1280w" alt="Jraft&#x27;s collaborative editor in action">
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Collaborative Editing</h3>
@@ -286,7 +281,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div data-w-id="efc0a1b9-9ce0-c088-9228-3f79444db841" style="opacity:0" class="div-block-1432"><img src="images/Crikey.svg" loading="lazy" alt="Crikey Logo" class="image-59">
           <div class="text-block-54">&quot;The innovation brought by Storipress fosters the energy and spirit needed in the world of publishing.&quot;<br></div>
           <div class="div-block-1439">
-            <div class="div-block-1440"><img src="images/Peter-Fray.png" loading="lazy" width="48" height="48" srcset="images/Peter-Fray-p-500.png 500w, images/Peter-Fray.png 521w" sizes="(max-width: 479px) 98vw, (max-width: 767px) 9vw, (max-width: 991px) 6vw, 4vw" alt="Peter Fray smiling"></div>
+            <div class="div-block-1440"><img src="images/Peter-Fray.png" loading="lazy" width="48" height="48" srcset="images/Peter-Fray-p-500.png 500w, images/Peter-Fray.png 521w" sizes="48px" alt="Peter Fray smiling"></div>
             <div class="div-block-1441">
               <div class="text-block-56">Peter Fray</div>
               <div class="text-block-56">Editor in Chief</div>
@@ -435,7 +430,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </ul>
         </div>
       </div>
-      <div class="footer-copyright-notice">© 2020 Albion Media Pty Ltd. All rights reserved.</div>
+      <div class="footer-copyright-notice">© Storipress</div>
     </div>
   </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f475d95bc662b718071304a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
