--- a/pricing.html
+++ b/pricing.html
@@ -2,6 +2,12 @@
 <!--  Last Published: Fri Jan 29 2021 04:40:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-bold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Plans &amp; Pricing | Storipress</title>
   <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Storipress, and it&#x27;s free forever. $14.90USD. Per month billed annually, or $21 billed monthly. Remove the Storipress logo and unlock multi-publication support. $33.90USD. Per month billed annually, or $48 billed monthly." name="description">
