--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <!--  Last Published: Fri Jan 29 2021 04:40:57 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
+  <link rel="preload" href="/fonts/archia-regular-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-medium-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-light-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/fonts/archia-thin-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <meta charset="utf-8">
   <title>Storipress: The best publishing and blogging platform ever</title>
   <meta content="Build and manage a professional publication, then launch with our world-class hosting. Discover the professional platform built for publishers." name="description">
