--- a/legal/privacy-policy.html
+++ b/legal/privacy-policy.html
@@ -274,7 +274,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </ul>
         </div>
       </div>
-      <div class="footer-copyright-notice">© 2020 Albion Media Pty Ltd. All rights reserved.</div>
+      <div class="footer-copyright-notice">© Storipress</div>
     </div>
   </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f475d95bc662b718071304a" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
