--- a/pricing.html
+++ b/pricing.html
@@ -581,7 +581,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">My publication relies on a lot of third party writer submissions</h5>
-        <div class="all-plans-description">Storipress only counts <span class="text-span-11">active</span> users as part of your billing, i.e., authors or contributors who have more than 1 article published per month. This model makes Storipress perfectly suited for publications which rely solely on contributions!<br></div>
+        <div class="all-plans-description">Storipress only counts <span class="text-span-11">active</span> users as part of your billing, i.e., authors or contributors who have more than 1 article published per month. This makes Storipress really suited for publications heavily reliant on submissions.<br></div>
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">Does Storipress have an affiliate program?</h5>
