--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!--  Last Published: Wed Feb 03 2021 00:02:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
+  <script data-ad-client="ca-pub-9412110643395442" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <meta charset="utf-8">
   <title>Storipress: The best publishing and blogging platform ever</title>
   <meta content="Build and manage a professional publication, then launch with our world-class hosting. Discover the professional platform built for publishers." name="description">
