--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -3,12 +3,12 @@
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>A better, smarter WordPress alternative. By publishers, for publishers | Storipress</title>
+  <title>A better, smarter WordPress alternative | Storipress</title>
   <meta content="The serious publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." name="description">
-  <meta content="A better, smarter WordPress alternative. By publishers, for publishers | Storipress" property="og:title">
+  <meta content="A better, smarter WordPress alternative | Storipress" property="og:title">
   <meta content="The serious publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1610941039/1500x500" property="og:image">
-  <meta content="A better, smarter WordPress alternative. By publishers, for publishers | Storipress" property="twitter:title">
+  <meta content="A better, smarter WordPress alternative | Storipress" property="twitter:title">
   <meta content="The serious publisher&#x27;s alternative to Wordpress. Storipress combines a CMS with intuitive real-time content management tools with powerful visual publication design tools, so you can build a performant publication and manage your team effectively. And with nothing to install, automatic updates, and no PHP, it&#x27;s the WordPress alternative you need." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1610941039/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
