Fixed wrong link

--- a/vs/medium.html
+++ b/vs/medium.html
@@ -268,7 +268,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="feature-bounding-box other-features-1">
     <h2 class="heading-10">More comparisons</h2>
     <div class="div-block-1397">
-      <a href="../vs/medium" aria-current="page" class="other-features-parent comparisons w-inline-block w--current">
+      <a href="../vs/wordpress" aria-current="page" class="other-features-parent comparisons w-inline-block w--current">
         <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">WordPress</h4>
