--- a/pricing.html
+++ b/pricing.html
@@ -561,7 +561,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">Do you have discounts for student publications or nonprofits?</h5>
-        <div class="all-plans-description">Yes! Storipress is free for student publications and nonprofits.<strong class="bold-text-2"> </strong>Shoot us an email with proof of your study or non-profit status at <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong><br></div>
+        <div class="all-plans-description">Yes! Storipress is free for student publications and nonprofits. Shoot us an email with proof of your study or non-profit status at <a href="mailto:hello@storipress.com?subject=Storipress%20for%20Students%20%26%20Non-Profits"><strong class="bold-text-2">hello@storipress.com</strong></a><strong class="bold-text-2">.</strong><br></div>
       </div>
       <div class="faq-question-parent">
         <h5 class="all-plans-titile">How are users calculated for billing?</h5>
