--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-block-1331">
       <div class="div-block-1332">
         <div class="hero-text">
-          <h1 class="hero-header landing">Made for teams.</h1>
+          <div class="text-block-23">You&#x27;ve found</div>
+          <h1 class="hero-header landing">The Best Publishing Platform Ever.</h1>
           <div class="hero-paragraph">Storipress brings real-time collaboration to writers, editors, and designers to enable your team to build publications people want to discover. So whether you&#x27;re a food blogger or the New York Times, Storipress is the platform to showcase your best work.</div>
           <div class="div-block">
             <a href="#Footer-CTA" class="joint-beta-button w-button">Join Beta</a>
