fix: corrected copy

--- a/vs/wix.html
+++ b/vs/wix.html
@@ -306,7 +306,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">WordPress</h4>
-          <div class="text-block-45">With powerful collaboration features, comparing Storipress and WordPress is like comparing Notepad and Google Docs.</div>
+          <div class="text-block-45">With powerful collaboration features, comparing WordPress to Storipress is like comparing Notepad to Google Docs.</div>
         </div>
       </a>
       <a href="../vs/medium" class="other-features-parent comparisons w-inline-block">
