--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -146,7 +146,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Storipress vs WordPress</h1>
-          <div class="text-block-48">Comparing Storipress and WordPress is like comparing Notepad to Google Docs. Storipress combines powerful collaboration features with a visual website builder so you can work with your whole team on a centralised platform.</div>
+          <div class="text-block-48">Comparing WordPress to Storipress is like comparing Notepad to Google Docs. Storipress combines powerful collaboration features with a visual website builder so you can work with your whole team on a centralised platform.</div>
         </div>
       </div>
     </div>
