bug: fixed mailto address (tryjraft → storipress)

--- a/pricing.html
+++ b/pricing.html
@@ -471,7 +471,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="pre-cta-content">Storipress is a proud supporter of youth media and ethical journalism. That&#x27;s why we provide unlimited seats on our Plus plan with no bandwidth restrictions to student publications and not-for-profits. Shoot us an email to determine eligibility.<br></div>
       </div>
       <div class="button-parent">
-        <a href="mailto:hello@tryjraft.com?subject=Student%20Discount" class="button square-corners w-button">Contact Us<br></a>
+        <a href="mailto:hello@storipress.com?subject=Student%20Discount" class="button square-corners w-button">Contact Us<br></a>
       </div>
       <div class="photo-bg-colour pricing-students"></div>
     </div>
@@ -481,7 +481,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="pre-cta-content">Need multi-publication support, custom features or ad integrations, assisted migration, and enterprise-grade scalability, security &amp; support? Our enterprise plan does it all, better, for half the price of other CMSs.</div>
       </div>
       <div class="button-parent">
-        <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20for%20Enterprise" class="button square-corners w-button">Contact Sales</a>
+        <a href="mailto:enterprise@storipress.com?subject=Jraft%20for%20Enterprise" class="button square-corners w-button">Contact Sales</a>
       </div>
     </div>
   </div>
