--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="div-block-1331">
       <div class="div-block-1332">
         <div class="hero-text">
-          <h1 class="hero-header landing">A Platform for the Next Generation of Publishers.</h1>
+          <h1 class="hero-header landing">For the Next Generation of Publishers.</h1>
           <div class="hero-paragraph">Storipress brings real-time collaboration to writers, editors, and designers; enabling your entire team to create publications people want to discover.</div>
           <div class="div-block">
             <a href="#Footer-CTA" class="joint-beta-button w-button">Join Beta</a>
